2012-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	NEWS: Add MATCH-AUTOLABEL labelstr.

2012-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: labelstr can be the MATCH-AUTOLABEL keyword.
	  Add all hook to handle the new labelstr_t typedef.
	* common-src/conffile.h: Add new labelstr_t typedef.
	* perl/Amanda/Config.swg: Handle new labelstr_t typedef.
	* common-src/match.c (match_labelstr): New method. The labelstr
	  template can have all autolabel variable.
	* common-src/match.h (match_labelstr): Add prototype.
	* perl/Amanda/Util.swg: Add match_labelstr and the required typemap.
	* installcheck/Amanda_Changer.pl: Remove test for emoved Changer method
	  volume_is_labelable
	* man/xml-source/amanda.conf.5.xml: Explain new labelstr setting
	* perl/Amanda/Changer.pm: Remove volume_is_labelable method, handle
	  new autolabel setting, use match_labelstr.
	* perl/Amanda/Changer/disk.pm: Add meta to the reservation.
	* perl/Amanda/ScanInventory.pm, perl/Amanda/Taper/Scan/lexical.pm,
	* perl/Amanda/Taper/Scan/oldest.pm,
	* perl/Amanda/Taper/Scan/traditional.pm, server-src/amlabel.pl,
	* server-src/amtape.pl, server-src/tapefile.c: Handle new autolabel
	  setting, use match_labelstr.

2012-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix for older perl.

2012-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Changes in 3.3.3

2012-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Ignore duplicate DONE/FAILED messages.

2012-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Pass the %params to changer.
	* perl/Amanda/Changer/aggregate.pm: Pass the %params to child changer.
	* perl/Amanda/Changer/aggregate.pm (make_new_tape_label,
	  make_new_meta_label): Call the child changer.

2012-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add a verify subcommand.