@@ -221,7 +221,8 @@ APPLY(DUMPTYPE_DATA_PATH)\
 APPLY(DUMPTYPE_ALLOW_SPLIT)\
 APPLY(DUMPTYPE_MAX_WARNINGS)\
 APPLY(DUMPTYPE_RECOVERY_LIMIT) \
-APPLY(DUMPTYPE_DUMP_LIMIT)
+APPLY(DUMPTYPE_DUMP_LIMIT) \
+APPLY(DUMPTYPE_RETRY_DUMP)
 
 amglue_add_enum_tag_fns(dumptype_key);
 amglue_add_constants(FOR_ALL_DUMPTYPE_KEY, dumptype_key);
