@@ -127,6 +127,7 @@ typedef struct disk_s {
     char       *application;
     identlist_t pp_scriptlist;
     host_limit_t *dump_limit;
+    int		retry_dump;
     void	*up;			/* generic user pointer */
 } disk_t;
 
